# avian

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  flake.nix  local_export.sh  publish.sh
.cargo/: config_ci.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml
benches/: .gitignore  Cargo.toml  README.md  lib.rs
benches/src/: cli.rs  main.rs
benches/src/dim2/: large_pyramid.rs  many_pyramids.rs  mod.rs
benches/src/dim3/: large_pyramid.rs  many_pyramids.rs  mod.rs
benches2d/: Cargo.toml
benches2d/src/: large_pyramid.rs  main.rs  many_pyramids.rs
benches_cli/: Cargo.toml
benches_cli/src/: lib.rs
bevy_xpbd_derive/: Cargo.toml  README.md
bevy_xpbd_derive/src/: lib.rs
crates/avian2d/: Cargo.toml
crates/avian2d/benches/: pyramid.rs
crates/avian2d/examples/: ccd.rs  chain_2d.rs  collision_layers.rs  custom_collider.rs  custom_gravity.rs  debugdump_2d.rs  determinism_2d.rs  distance_joint_2d.rs  fixed_joint_2d.rs  interpolation.rs  many_pyramids_2d.rs  many_shapes.rs  move_marbles.rs  one_way_platform_2d.rs  prismatic_joint_2d.rs  pyramid.rs  pyramid_2d.rs  ray_caster.rs  revolute_joint_2d.rs  sensor.rs  spatial_query.rs  tumbler.rs
crates/avian2d/examples/dynamic_character_2d/: main.rs  plugin.rs
crates/avian2d/examples/kinematic_character_2d/: main.rs  plugin.rs
crates/avian2d/snapshots/: avian2d__tests__body_with_velocity_moves.snap
crates/avian3d/: Cargo.toml
crates/avian3d/benches/: cubes.rs
crates/avian3d/examples/: async_colliders.rs  cast_ray_predicate.rs  chain_3d.rs  collider_constructors.rs  conveyor_belt.rs  cubes.rs  custom_broad_phase.rs  custom_constraint.rs  debugdump_3d.rs  diagnostics.rs  distance_joint_3d.rs  fixed_joint_3d.rs  floating_origin.rs  gyroscopic_motion.rs  picking.rs  picking_3d.rs  prismatic_joint_3d.rs  revolute_joint_3d.rs  trimesh_shapes_3d.rs  voxels_3d.rs
crates/avian3d/examples/collide_and_slide_3d/: main.rs  plugin.rs
crates/avian3d/examples/dynamic_character_3d/: main.rs  plugin.rs
crates/avian3d/examples/kinematic_character_3d/: main.rs  plugin.rs
crates/avian3d/examples/kinematic_character_cas_3d/: main.rs  plugin.rs
crates/avian3d/snapshots/: avian3d__tests__body_with_velocity_moves.snap  avian3d__tests__cubes_simulation_is_deterministic_across_machines.snap  bevy_xpbd_3d__tests__cubes_simulation_is_deterministic_across_machines.snap
crates/avian_derive/: Cargo.toml  README.md
crates/avian_derive/src/: lib.rs
crates/benches_common_2d/: Cargo.toml
crates/benches_common_3d/: Cargo.toml
crates/benches_common_3d/src/: lib.rs
crates/bevy_xpbd_2d/: Cargo.toml
crates/bevy_xpbd_2d/examples/: chain2d.rs  chain_2d.rs  collision_layers.rs  custom_collider.rs  distance_joint_2d.rs  fixed_joint_2d.rs  many_shapes.rs  move_marbles.rs  one_way_platform_2d.rs  prismatic_joint_2d.rs  ray_caster.rs  revolute_joint_2d.rs  sensor.rs
crates/bevy_xpbd_2d/examples/dynamic_character_2d/: main.rs  plugin.rs
crates/bevy_xpbd_2d/examples/kinematic_character_2d/: main.rs  plugin.rs
crates/bevy_xpbd_2d/snapshots/: bevy_xpbd_2d__tests__body_with_velocity_moves.snap  bevy_xpbd_2d__tests__body_with_velocity_moves.snap.new
crates/bevy_xpbd_2d_f64/: Cargo.toml  examples
crates/bevy_xpbd_3d/: Cargo.toml
crates/bevy_xpbd_3d/assets/: character_controller_demo.glb
crates/bevy_xpbd_3d/assets/models/: test_angles.gltf
crates/bevy_xpbd_3d/benches/: cubes.rs
crates/bevy_xpbd_3d/examples/: async_colliders.rs  ball_pit.rs  basic_dynamic_character.rs  basic_kinematic_character.rs  cast_ray_predicate.rs  chain3d.rs  chain_3d.rs  collider_constructors.rs  cubes.rs  cubes_f64.rs  cubess.rs  custom_broad_phase.rs  custom_constraint.rs  deferred_colliders.rs  distance_joint_3d.rs  fixed_joint_3d.rs  lazy_colliders.rs  prismatic_joint_3d.rs  revolute_joint_3d.rs  rolling_balls.rs  spherical_joint.rs  trimesh_shapes_3d.rs
crates/bevy_xpbd_3d/examples/dynamic_character/: main.rs  plugin.rs
crates/bevy_xpbd_3d/examples/dynamic_character_3d/: main.rs  plugin.rs
crates/bevy_xpbd_3d/examples/kinematic_character/: main.rs  plugin.rs
crates/bevy_xpbd_3d/examples/kinematic_character_3d/: main.rs  plugin.rs
crates/bevy_xpbd_3d/snapshots/: bevy_xpbd_3d__tests__body_with_velocity_moves.snap  bevy_xpbd_3d__tests__body_with_velocity_moves.snap.new  bevy_xpbd_3d__tests__cubes_simulation_is_deterministic.snap  bevy_xpbd_3d__tests__cubes_simulation_is_deterministic_across_machines.snap  bevy_xpbd_3d__tests__cubes_simulation_is_deterministic_across_machines.snap.new
crates/bevy_xpbd_3d_f64/: Cargo.toml  examples
crates/bevy_xpbd_derive/: Cargo.toml
crates/bevy_xpbd_derive/src/: lib.rs
crates/examples_common_2d/: Cargo.toml
crates/examples_common_2d/src/: lib.rs
crates/examples_common_2d_f64/: Cargo.toml
crates/examples_common_3d/: Cargo.toml
crates/examples_common_3d/src/: lib.rs
crates/examples_common_3d_f64/: Cargo.toml
crates/examples_common_3d_f64/src/: lib.rs
examples/2d/: fixed_joint_2d.rs  many_shapes.rs  move_marbles.rs  prismatic_joint_2d.rs
examples/3d/: custom_constraint.rs  revolute_joint_3d.rs  trimesh_shapes_3d.rs
examples_common_2d/: Cargo.toml
examples_common_2d/src/: grabber.rs  lib.rs
examples_common_3d/: Cargo.toml
examples_common_3d/src/: grabber.rs
migration-guides/: 0.1-to-0.2.md  0.2-to-0.3.md  0.3-to-0.4.md  0.4-to-main.md  README.md
snapshots/: bevy_xpbd_2d__tests__body_with_velocity_moves.snap  bevy_xpbd_3d__tests__body_with_velocity_moves.snap
src/: ancestor_marker.rs  bundles.rs  collision.rs  components.rs  graph.rs  interpolation.rs  lib.rs  position.rs  prepare.rs  resources.rs  sync.rs  systems.rs  tests.rs  type_registration.rs  utils.rs
src/collision/: broad_phase.rs  collider_backend.rs  collision_events.rs  contact_query.rs  contact_reporting.rs  diagnostics.rs  feature_id.rs  hooks.rs  layers.rs  mod.rs  narrow_phase.rs
src/common/: bundles.rs  collision.rs  mod.rs  resources.rs  utils.rs
src/components/: collider.rs  forces.rs  layers.rs  locked_axes.rs  mass_properties.rs  mass_props.rs  mod.rs  (+2 more)
(+258 files in other folders)
