[package]
name = "bevy_xpbd"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "A physics engine based on Extended Position Based Dynamics for the Bevy game engine"
documentation = "https://docs.rs/bevy_xpbd_3d"
repository = "https://github.com/Jondolf/bevy_xpbd"
readme = "README.md"
keywords = ["gamedev", "physics", "simulation", "xpbd", "bevy"]
categories = ["game-development", "science", "simulation"]

[features]
default = ["2d", "3d", "f32", "async-collider", "debug-plugin", "parallel"]
2d = []
3d = []
f32 = ["dep:parry2d", "dep:parry3d"]
f64 = ["dep:parry2d-f64", "dep:parry3d-f64"]
debug-plugin = ["bevy/bevy_gizmos", "bevy/bevy_render"]
simd = [
    "parry2d?/simd-stable",
    "parry2d-f64?/simd-stable",
    "parry3d?/simd-stable",
    "parry3d-f64?/simd-stable",
]
parallel = [
    "parry2d?/parallel",
    "parry2d-f64?/parallel",
    "parry3d?/parallel",
    "parry3d-f64?/parallel",
]
enhanced-determinism = [
    "parry2d?/enhanced-determinism",
    "parry2d-f64?/enhanced-determinism",
    "parry3d?/enhanced-determinism",
    "parry3d-f64?/enhanced-determinism",
    "glam/libm",
]
collider-from-mesh = ["bevy/bevy_render"]
async-collider = ["bevy/bevy_scene", "bevy/bevy_gltf", "collider-from-mesh"]

[dependencies]
bevy_xpbd_derive = { path = "./bevy_xpbd_derive", version = "0.1" }
bevy = { version = "0.12", default-features = false }
parry2d = { version = "0.13", optional = true }
parry2d-f64 = { version = "0.13", optional = true }
parry3d = { version = "0.13", optional = true }
parry3d-f64 = { version = "0.13", optional = true }
nalgebra = { version = "0.32", features = ["convert-glam024"] }
glam = { version = "0.24", features = ["approx"] }
derive_more = "0.99"
indexmap = "2.0.0"
fxhash = "0.2.1"
itertools = "0.11"

[dev-dependencies]
examples_common_2d = { path = "./examples_common_2d" }
examples_common_3d = { path = "./examples_common_3d" }
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.0"

[profile.dev]
opt-level = 1 # Use slightly better optimization, so examples work

[[example]]
name = "dynamic_character_2d"
path = "examples/2d/dynamic_character_2d.rs"
required-features = ["2d"]

[[example]]
name = "kinematic_character_2d"
path = "examples/2d/kinematic_character_2d.rs"
required-features = ["2d"]

[[example]]
name = "chain_2d"
path = "examples/2d/chain_2d.rs"
required-features = ["2d"]

[[example]]
name = "collision_layers"
path = "examples/2d/collision_layers.rs"
required-features = ["2d"]

[[example]]
name = "fixed_joint_2d"
path = "examples/2d/fixed_joint_2d.rs"
required-features = ["2d"]

[[example]]
name = "move_marbles"
path = "examples/2d/move_marbles.rs"
required-features = ["2d"]

[[example]]
name = "prismatic_joint_2d"
path = "examples/2d/prismatic_joint_2d.rs"
required-features = ["2d"]

[[example]]
name = "ray_caster"
path = "examples/2d/ray_caster.rs"
required-features = ["2d"]

[[example]]
name = "revolute_joint_2d"
path = "examples/2d/revolute_joint_2d.rs"
required-features = ["2d"]

[[example]]
name = "dynamic_character_3d"
path = "examples/3d/dynamic_character_3d.rs"
required-features = ["3d", "async-collider"]

[[example]]
name = "kinematic_character_3d"
path = "examples/3d/kinematic_character_3d.rs"
required-features = ["3d", "async-collider"]

[[example]]
name = "chain_3d"
path = "examples/3d/chain_3d.rs"
required-features = ["3d"]

[[example]]
name = "cubes"
path = "examples/3d/cubes.rs"
required-features = ["3d"]

[[example]]
name = "custom_broad_phase"
path = "examples/3d/custom_broad_phase.rs"
required-features = ["3d"]

[[example]]
name = "custom_constraint"
path = "examples/3d/custom_constraint.rs"
required-features = ["3d"]

[[example]]
name = "fixed_joint_3d"
path = "examples/3d/fixed_joint_3d.rs"
required-features = ["3d"]

[[example]]
name = "prismatic_joint_3d"
path = "examples/3d/prismatic_joint_3d.rs"
required-features = ["3d"]

[[example]]
name = "revolute_joint_3d"
path = "examples/3d/revolute_joint_3d.rs"
required-features = ["3d"]

[[example]]
name = "trimesh_shapes_3d"
path = "examples/3d/trimesh_shapes_3d.rs"
required-features = ["3d"]

[[example]]
name = "async_colliders"
path = "examples/3d/async_colliders.rs"
required-features = ["3d", "async-collider"]

[[bench]]
name = "cubes"
harness = false
