[package]
name = "benches_cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "A command-line interface for benchmarking Avian"
repository = "https://github.com/Jondolf/avian"
readme = "README.md"

[dependencies]
bevy_app = { version = "0.16", default-features = false }
bevy_tasks = { version = "0.16", default-features = false }
clap = { version = "4.5", features = ["derive"] }
rayon = { version = "1.10" }

[lints]
workspace = true
