[package]
name = "avian2d"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "An ECS-driven physics engine for the Bevy game engine"
documentation = "https://docs.rs/avian2d"
repository = "https://github.com/Jondolf/avian"
readme = "README.md"
keywords = ["gamedev", "physics", "simulation", "bevy"]
categories = ["game-development", "science", "simulation"]

[features]
default = [
    "2d",
    "f32",
    "parry-f32",
    "debug-plugin",
    "parallel",
    "bevy_scene",
    "bevy_picking",
]
2d = []
f32 = []
f64 = []

debug-plugin = ["bevy/bevy_gizmos", "bevy/bevy_render"]
simd = ["parry2d?/simd-stable", "parry2d-f64?/simd-stable"]
parallel = [
    "dep:thread_local",
    "bevy/multi_threaded",
    "parry2d?/parallel",
    "parry2d-f64?/parallel",
]
enhanced-determinism = [
    "dep:libm",
    "bevy_math/libm",
    "bevy_heavy/libm",
    "parry2d?/enhanced-determinism",
    "parry2d-f64?/enhanced-determinism",
]

default-collider = ["dep:nalgebra"]
# We unfortunately can't reuse the f32 and f64 features for this,
# because Parry uses separate crates for f32 and f64.
parry-f32 = ["f32", "dep:parry2d", "default-collider"]
parry-f64 = ["f64", "dep:parry2d-f64", "default-collider"]

bevy_scene = ["bevy/bevy_scene"]
bevy_picking = ["bevy/bevy_picking"]
serialize = [
    "dep:serde",
    "bevy/serialize",
    "bevy_heavy/serialize",
    "bevy_transform_interpolation/serialize",
    "parry2d?/serde-serialize",
    "parry2d-f64?/serde-serialize",
    "bitflags/serde",
]

# Enables writing timer and counter information to the `DiagnosticsStore` in `bevy_diagnostic`.
bevy_diagnostic = []

# Enables the `PhysicsDiagnosticsUiPlugin` for visualizing physics diagnostics data with a debug UI.
diagnostic_ui = ["bevy_diagnostic", "bevy/bevy_ui"]

[lib]
name = "avian2d"
path = "../../src/lib.rs"
required-features = ["2d"]
bench = false

[dependencies]
avian_derive = { path = "../avian_derive", version = "0.2" }
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_log",
] }
bevy_math = { version = "0.16" }
bevy_heavy = { version = "0.2" }
bevy_transform_interpolation = { version = "0.2" }
libm = { version = "0.2", optional = true }
approx = "0.5"
parry2d = { version = "0.17", optional = true }
parry2d-f64 = { version = "0.17", optional = true }
nalgebra = { version = "0.33", features = ["convert-glam029"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
derive_more = "1"
arrayvec = "0.7"
itertools = "0.13"
bitflags = "2.5.0"
thread_local = { version = "1.1", optional = true }

[dev-dependencies]
examples_common_2d = { path = "../examples_common_2d" }
benches_common_2d = { path = "../benches_common_2d" }
bevy_math = { version = "0.16", features = ["approx"] }
bevy_heavy = { version = "0.2", features = ["approx"] }
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = "1.19"
criterion = { version = "0.5", features = ["html_reports"] }
bevy_mod_debugdump = { version = "0.13" }

[lints]
workspace = true

[package.metadata.docs.rs]
# Enable features when building the docs on docs.rs
features = ["diagnostic_ui"]

[[example]]
name = "dynamic_character_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "kinematic_character_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "ccd"
required-features = ["2d", "default-collider"]

[[example]]
name = "chain_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "collision_layers"
required-features = ["2d", "default-collider"]

[[example]]
name = "custom_collider"
required-features = ["2d"]

[[example]]
name = "determinism_2d"
required-features = ["2d", "default-collider", "enhanced-determinism"]

[[example]]
name = "fixed_joint_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "interpolation"
required-features = ["2d"]

[[example]]
name = "move_marbles"
required-features = ["2d", "default-collider"]

[[example]]
name = "prismatic_joint_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "pyramid_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "ray_caster"
required-features = ["2d", "default-collider"]

[[example]]
name = "revolute_joint_2d"
required-features = ["2d", "default-collider"]

[[example]]
name = "debugdump_2d"
required-features = ["2d"]
