[package]
name = "avian3d"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "An ECS-driven physics engine for the Bevy game engine"
documentation = "https://docs.rs/avian3d"
repository = "https://github.com/Jondolf/avian"
readme = "README.md"
keywords = ["gamedev", "physics", "simulation", "bevy"]
categories = ["game-development", "science", "simulation"]

[features]
default = [
    "3d",
    "f32",
    "parry-f32",
    "collider-from-mesh",
    "bevy_scene",
    "bevy_picking",
    "debug-plugin",
    "parallel",
]
3d = []
f32 = []
f64 = []

debug-plugin = ["bevy/bevy_gizmos", "bevy/bevy_render"]
simd = ["parry3d?/simd-stable", "parry3d-f64?/simd-stable"]
parallel = ["std", "parry3d?/parallel", "parry3d-f64?/parallel"]
enhanced-determinism = [
    "libm",
    "parry3d?/enhanced-determinism",
    "parry3d-f64?/enhanced-determinism",
    "bevy_math/libm",
    "bevy_heavy/libm",
]

default-collider = ["dep:nalgebra"]
# We unfortunately can't reuse the f32 and f64 features for this,
# because Parry uses separate crates for f32 and f64.
parry-f32 = ["f32", "dep:parry3d", "default-collider"]
parry-f64 = ["f64", "dep:parry3d-f64", "default-collider"]

collider-from-mesh = ["bevy/bevy_render", "3d"]
bevy_scene = ["bevy/bevy_scene"]
bevy_picking = ["bevy/bevy_picking"]
serialize = [
    "dep:serde",
    "bevy/serialize",
    "bevy_heavy/serialize",
    "bevy_transform_interpolation/serialize",
    "parry3d?/serde-serialize",
    "parry3d-f64?/serde-serialize",
    "bitflags/serde",
]

# Enables writing timer and counter information to the `DiagnosticsStore` in `bevy_diagnostic`.
bevy_diagnostic = []

# Enables the `PhysicsDiagnosticsUiPlugin` for visualizing physics diagnostics data with a debug UI.
diagnostic_ui = ["bevy_diagnostic", "bevy/bevy_ui"]

# Enable the Rust standard library.
std = [
    "bevy/std",
    "bevy_heavy/std",
    "bevy_transform_interpolation/std",
    "parry3d?/std",
    "parry3d-f64?/std",
]

# Enable `libm` math operations for `no_std` environments and cross-platform determinism.
libm = [
    "dep:libm",
    "bevy/libm",
    "bevy_heavy/libm",
    "bevy_transform_interpolation/libm",
]

[lib]
name = "avian3d"
path = "../../src/lib.rs"
required-features = ["3d"]
bench = false

[dependencies]
avian_derive = { path = "../avian_derive", version = "0.2" }
bevy = { version = "0.16.0-rc.1", default-features = false }
bevy_math = { version = "0.16.0-rc.1", default-features = false }
bevy_heavy = { git = "https://github.com/Jondolf/bevy_heavy", default-features = false, features = [
    "2d",
    "3d",
] }
bevy_transform_interpolation = { git = "https://github.com/Jondolf/bevy_transform_interpolation", default-features = false }
libm = { version = "0.2", optional = true }
parry3d = { version = "0.17", optional = true, default-features = false, features = [
    "required-features",
] }
parry3d-f64 = { version = "0.17", optional = true, default-features = false, features = [
    "required-features",
] }
nalgebra = { version = "0.33", default-features = false, features = [
    "convert-glam029",
], optional = true }
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }
derive_more = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
indexmap = { version = "2.0.0", default-features = false }
arrayvec = { version = "0.7", default-features = false }
itertools = { version = "0.13", default-features = false }
bitflags = { version = "2.5.0", default-features = false }

[dev-dependencies]
examples_common_3d = { path = "../examples_common_3d" }
benches_common_3d = { path = "../benches_common_3d" }
bevy = { version = "0.16.0-rc.1", default-features = false, features = [
    "bevy_gltf",
    "animation",
] }
bevy_math = { version = "0.16.0-rc.1", features = ["approx"] }
bevy_heavy = { git = "https://github.com/Jondolf/bevy_heavy", features = [
    "approx",
] }
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
# TODO: Update to the latest version when it's available.
# bevy_mod_debugdump = { version = "0.12" }

[lints]
workspace = true

[package.metadata.docs.rs]
# Enable features when building the docs on docs.rs
features = ["diagnostic_ui"]

[[example]]
name = "dynamic_character_3d"
required-features = ["3d", "default-collider", "bevy_scene"]

[[example]]
name = "kinematic_character_3d"
required-features = ["3d", "default-collider", "bevy_scene"]

[[example]]
name = "cast_ray_predicate"
required-features = ["3d", "default-collider"]

[[example]]
name = "chain_3d"
required-features = ["3d", "default-collider"]

[[example]]
name = "collider_constructors"
required-features = ["3d", "default-collider", "bevy_scene"]

[[example]]
name = "conveyor_belt"
required-features = ["3d", "default-collider"]

[[example]]
name = "cubes"
required-features = ["3d", "default-collider"]

[[example]]
name = "custom_broad_phase"
required-features = ["3d", "default-collider"]

[[example]]
name = "custom_constraint"
required-features = ["3d", "default-collider"]

[[example]]
name = "distance_joint_3d"
required-features = ["3d", "default-collider", "debug-plugin"]

[[example]]
name = "fixed_joint_3d"
required-features = ["3d", "default-collider"]

[[example]]
name = "prismatic_joint_3d"
required-features = ["3d", "default-collider"]

[[example]]
name = "revolute_joint_3d"
required-features = ["3d", "default-collider"]

[[example]]
name = "picking"
required-features = ["3d", "default-collider", "bevy_picking"]

[[example]]
name = "trimesh_shapes_3d"
required-features = ["3d", "default-collider", "bevy_scene"]

[[example]]
name = "diagnostics"
required-features = ["3d", "default-collider", "diagnostic_ui"]

[[example]]
name = "debugdump_3d"
required-features = ["3d"]

[[bench]]
name = "cubes"
required-features = ["3d", "default-collider"]
harness = false
