[package]
name = "avian_derive"
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "Provides derive implementations for Avian Physics"
repository = "https://github.com/avianphysics/avian"
readme = "README.md"

[lib]
proc-macro = true
bench = false

[dependencies]
proc-macro2 = "1.0.78"
proc-macro-error2 = "2.0"
quote = "1.0"
syn = "2.0"
